--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "prometheus-axum-middleware"
 version = "0.1.1"
 edition = "2024"
 author = [ "Gabriele Greco <ggr@veo.co>" ]
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/veo-technologies/prometheus-axum-middleware"
+description = "An axum layer to add prometheus metrics"
 
 [dependencies]
 axum = "0.8"
