Exclude from package .github scripts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ author = [ "Gabriele Greco <ggr@veo.co>" ]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/veo-technologies/prometheus-axum-middleware"
 description = "An axum layer to add prometheus metrics"
+exclude = [ ".github" ]
 
 [dependencies]
 axum = "0.8"
